# TQ9-fcitx5

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  build_docker.sh  build_package.sh  debug_run.sh  install_template.sh
data/: config.json  custom-input.conf  tq9-input.conf  tq9.conf
prompt/: original.md
ref_cs/: Q9Core.cs  Q9Form.cs  prompt.md  tq9_settings.ini
src/: ConfigLoader.cpp  ConfigLoader.h  CustomEngine.cpp  CustomEngine.h  Database.cpp  Database.h  Q9Logic.cpp  Q9Logic.h  addon.cpp  test_db.cpp
src/ui/: CustomButton.cpp  CustomButton.h  FloatingWindow.cpp  FloatingWindow.h  main.cpp
